Fix overlaping with arm state buttons (#3665)

--- a/src/css/tabs/led_strip.less
+++ b/src/css/tabs/led_strip.less
@@ -270,7 +270,6 @@
 	}
 
 	.brightnessSliderDiv {
-		margin-top: -15px;
 		.brightnessSlider{
 			display: flex;
 			align-items: center;
